--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -131,7 +131,7 @@
       <% if @contents.present? %>
       <% @contents.each do |content| %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to content_path(content.id), method: :get do %>
         <div class='item-img-content'>
           <%= image_tag content.image, class: "item-img" %>
 
