--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -23,7 +23,7 @@
 
   <% if user_signed_in? %>
     <% if current_user.id == @content.user_id %>
-    <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
+    <%= link_to "商品の編集", edit_content_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
     <% else %>
