--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -25,7 +25,7 @@
     <% if current_user.id == @content.user_id %>
     <%= link_to "商品の編集", edit_content_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
-    <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
+    <%= link_to "削除", content_path, method: :delete, class:"item-destroy" %>
     <% else %>
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
     <% end %>
