--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -27,7 +27,7 @@
     <p class="or-text">or</p>
     <%= link_to "削除", content_path, method: :delete, class:"item-destroy" %>
     <% else %>
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", content_purchases_path(@content.id), method: :get, class:"item-red-btn"%>
     <% end %>
   <% end %>
 
