エラーハンドリング修正、ログイン時ログアウト時のページ遷移修正

--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -8,9 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @content.image ,class:"item-box-img" %>
+    <% if @content.purchase.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
+    <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -21,7 +23,7 @@
       </span>
     </div>
 
-  <% if user_signed_in? %>
+  <% if user_signed_in? && @content.purchase == nil %>
     <% if current_user.id == @content.user_id %>
     <%= link_to "商品の編集", edit_content_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
