--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -135,11 +135,11 @@
         <div class='item-img-content'>
           <%= image_tag content.image, class: "item-img" %>
 
-          <%# 商品が売れていればsold outを表示しましょう %>
+        <% if content.purchase.present? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
+          <% end %>
 
         </div>
         <div class='item-info'>
